--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -1,12 +1,16 @@
 .container {
   background: dodgerblue;
+  display: flex;
   border: 4px solid midnightblue;
   width: 400px;
   height: 300px;
+  justify-content: center;
+  align-items: center;
 }
 
 .box {
   background: palevioletred;
+  display: flex;
   font-weight: bold;
   text-align: center;
   border: 6px solid maroon;
