--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,25 +1,46 @@
+/* Use flexbox rules to create this very common webpage header style. 
+The benefit to using flex here is that everything should be _flexible_. 
+Check out the two screenshots below to get an idea of how it should scale 
+with your screen. Besides flex rules, you'll also want to add some rules 
+for margin and padding. (Hint: `ul`s have some default margin/padding 
+that you will need to deal with.)*/
+
 .header  {
+  display: flex;
   font-family: monospace;
   background: papayawhip;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  padding: 8px;
 }
 
 .logo {
+  display: flex;
   font-size: 48px;
   font-weight: 900;
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 10px;
 }
 
 ul {
-  /* this removes the dots on the list items*/
+  display: flex;
+  list-style-type: none;
+  gap: 10px;
+  margin: 0px;
+  padding: 0px;
+}
+
+li {
   list-style-type: none;
 }
 
 a {
+  display: flex;
   font-size: 22px;
   background: white;
   padding: 8px;
-  /* this removes the line under the links */
   text-decoration: none;
 }
